@@ -11,6 +11,12 @@ Version 1.7.4
        with "path/path not found". (Stefan)
 - BUG: Issue #175: Scroll to moved block
        doesn't work. (Stefan)
+- BUG: Issue #176: Diff settings "restore defaults"
+       doesn't work correctly. (Stefan)
+- BUG: Issue #177: TortoiseMerge shows
+       long lines incorrect. (Stefan)
+- BUG: Issue #178: copy of changed files list when
+       sorted copies wrong items. (Stefan)
 
 Version 1.7.3
 - BUG: Issue #149: Crash in OpenSSL. (Stefan)
